# RevelationScan

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  RevelationScan.spec  build_binary.sh  pyproject.toml  requirements.txt  revelation-scan.spec
src/RevelationScan/: __init__.py  __main__.py  cli.py
src/RevelationScan/core/: base.py  colors.py  feed.py  findings.py  registry.py  spinner.py  utils.py
src/RevelationScan/data/: __init__.py  cve_feed.json
src/RevelationScan/trumpets/: __init__.py  accounts.py  capabilities.py  cron.py  docker.py  kernel_hardening.py  listening_ports.py  nfs.py  packages.py  path_hygiene.py  sensitive_files.py  service_versions.py  setuid.py  ssh.py  sudoers.py  systemd.py  world_writable.py  writable_devices.py
tests/: __init__.py  conftest.py  test_revelation.py
